# 1-billion-rows-challenge

./: Cargo.toml  README.md  generate.py  input.txt
benches/: demo_bench.rs
src/: lib.rs  main.rs  processor.rs
