[package]
name = "one_brc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "demo_bench"
harness = false

[profile.perf]
inherits = "release"
debug = true
lto = false
codegen-units = 1
